<resources>
    <string name="app_name">ジェットファン台数算出</string>
    <string name="道路沿道状況">道路沿道状況</string>
    <string name="市街化していない地域">市街化していない地域</string>
    <string name="幾分市街化している地域">幾分市街化している地域</string>
    <string name="市街化している地域">市街化している地域</string>
    <string name="戻る">戻る</string>
    <string name="次へ">次へ</string>
    <string name="calc">計算</string>
    <string name="clear2">再計算</string>
    <string name="路線状況">路線状況</string>
    <string name="平地部">平地部</string>
    <string name="山地部">山地部</string>
    <string name="都市部">都市部</string>
    <string name="地方部">地方部</string>
    <string name="交通方式コメント">※一方通行、対面通行共に、２車線道路を対象とする。</string>
    <string name="s59_p27">(社)日本道路協会　道路の交通容量(S59) p27</string>
    <string name="s59_p84">(社)日本道路協会　道路の交通容量(S59) p84</string>
    <string name="s59_p80">(社)日本道路協会　道路の交通容量(S59) p80</string>
    <string name="s59_p86">(社)日本道路協会　道路の交通容量(S59) p86</string>
    <string name="h20_p11">(社)日本道路協会\n道路トンネル技術基準(換気編)・同解説(H20) p11</string>
    <string name="h20_p58">(社)日本道路協会\n道路トンネル技術基準(換気編)・同解説(H20) p58</string>
    <string name="h20_p61">(社)日本道路協会\n道路トンネル技術基準(換気編)・同解説(H20) p61</string>
    <string name="h20_p14">(社)日本道路協会\n道路トンネル技術基準(換気編)・同解説(H20) p14</string>
    <string name="h20_p221">(社)日本道路協会\n道路トンネル技術基準(換気編)・同解説(H20) p221</string>
    <string name="h20_p218">(社)日本道路協会\n道路トンネル技術基準(換気編)・同解説(H20) p218</string>
    <string name="h20_p00">(社)日本道路協会\n道路トンネル技術基準(換気編)・同解説(H20) p00</string>
    <string name="h13_p49">(社)日本道路協会 道路トンネル非常用施設設置基準・同解説(H13) p49\n※本プログラムは、トンネル内風速を2m/s以上確保できるように計算している。技術基準の改定があるので、新基準を確認してください。</string>
    <string name="第4種">第4種</string>
    <string name="第3種">第3種</string>
    <string name="第2種">第2種</string>
    <string name="第1種">第1種</string>
    <string name="道路交通規格">道路交通規格</string>
    <string name="TN_h20">準拠基準\n(社)日本道路協会　道路トンネル技術基準(換気編)・同解説(H20)\n(社)日本道路協会　道路トンネル非常用施設設置基準・同解説(H13)\n(社)日本道路協会　道路の交通容量(S59)</string>
    <string name="対面通行">対面通行</string>
    <string name="一方通行">一方通行</string>
    <string name="未選択">未選択</string>
    <string name="道路トンネル技術基準">本プログラムは、道路トンネルにおけるジェットファン台数を計算するものである。\n作者が、10年以上前にVisualBasic6.0で作成したものをAndroid Studioを使ってjavaに移植した。当時の利用方法は、設計成果物の検算、見積もり時のジェットファン台数を計算した。本プログラム完成現在(2022年)、換気設備の技術基準に変更は無いようなので、公開する。ただし、道路トンネル非常用施設設置基準に関して、改定があったが当方は内容を確認していない。ご了承のうえ、活用ください。\nなお、本プログラム利用におけるいかなる損害も作者は負わないものとします。</string>
    <string name="S交通方式">S交通方式</string>
    <string name="S道路区分">S道路区分</string>
    <string name="S道路地域">S道路地域</string>
    <string name="S道路地形">S道路地形</string>
    <string name="S沿道状況">S沿道状況</string>
    <string name="S車線幅員">S車線幅員</string>
    <string name="S側方余裕">S側方余裕</string>
    <string name="S道路勾配">S道路勾配</string>
    <string name="S大型車混入率">S大型車混入率</string>
    <string name="S計画交通量">S計画交通量</string>
    <string name="S選定交通量">S選定交通量</string>
    <string name="交通量計算">交通量計算</string>
    <string name="設計交通量の選択">設計交通量の選択</string>
    <string name="設計交通容量">設計交通容量</string>
    <string name="設計時間交通量">設計時間交通量</string>
    <string name="設計交通容量台">設計交通容量(台/h)</string>
    <string name="設計時間交通量台">設計時間交通量(台/h)</string>
    <string name="設計速度kmh">設計速度(km/h)</string>
    <string name="設計速度80">80</string>
    <string name="設計速度70">70</string>
    <string name="設計速度60">60</string>
    <string name="設計速度50">50</string>
    <string name="Sトンネル縦断屈曲数">トンネル縦断屈曲数</string>
    <string name="Sトンネル縦断諸元">トンネル縦断諸元</string>
    <string name="S屈曲数">S屈曲数</string>
    <string name="S屈曲数0">0</string>
    <string name="S屈曲数1">1</string>
    <string name="S屈曲数2">2</string>
    <string name="S屈曲数3">3</string>
    <string name="S屈曲数4">4</string>
    <string name="屈曲数0">0 個所</string>
    <string name="屈曲数1">1 個所</string>
    <string name="屈曲数2">2 個所</string>
    <string name="屈曲数3">3 個所</string>
    <string name="屈曲数4">4 個所</string>
    <string name="S区間延長">区間延長(m)</string>
    <string name="S区間勾配">区間勾配(%)</string>
    <string name="Sトンネル断面">Sトンネル断面</string>
    <string name="S代表寸法">S代表寸法</string>
    <string name="Sトンネル標高">Sトンネル標高</string>
    <string name="Sトンネル供用年度">トンネル供用年度</string>
    <string name="S供用年度20">平成20年</string>
    <string name="S供用年度21">平成21年</string>
    <string name="S供用年度22">平成22年</string>
    <string name="S供用年度23">平成23年</string>
    <string name="S供用年度24">平成24年</string>
    <string name="S供用年度25">平成25年以降</string>
    <string name="Clear">入力初期化</string>
    <string name="PrintLog">計算過程</string>
    <string name="PrintLog2">計算過程</string>
    <string name="PrintLog1Error">Error発生</string>
    <string name="activity_sub15_001">道路諸元</string>
    <string name="activity_sub15_002">車線幅員(m)</string>
    <string name="activity_sub15_003">3.5</string>
    <string name="activity_sub15_004">計画交通量(台/日)</string>
    <string name="activity_sub15_005">1500</string>
    <string name="activity_sub15_006">大型車混入率</string>
    <string name="activity_sub15_007">0.2</string>
    <string name="activity_sub15_008">道路勾配(%)</string>
    <string name="activity_sub15_009">2.0</string>
    <string name="activity_sub15_010">(道路勾配＜3％)</string>
    <string name="activity_sub15_011">側方余裕(m)</string>
    <string name="activity_sub15_012">0.75</string>
</resources>
