<?xml version="1.0" encoding="utf-8"?>
<!-- sub19 トンネル縦断屈曲数 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:gravity="top|center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/Sトンネル縦断屈曲数"
        android:textSize="30sp" />

    <RadioGroup
        android:id="@+id/radioGroupトンネル縦断屈曲数"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioButton190屈曲数0"
            android:layout_width="60dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/S屈曲数0"
            android:textSize="25sp" />

        <RadioButton
            android:id="@+id/radioButton191屈曲数1"
            android:layout_width="60dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/S屈曲数1"
            android:textSize="25sp" />

        <RadioButton
            android:id="@+id/radioButton192屈曲数2"
            android:layout_width="60dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/S屈曲数2"
            android:textSize="25sp" />

        <RadioButton
            android:id="@+id/radioButton193屈曲数3"
            android:layout_width="60dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/S屈曲数3"
            android:textSize="25sp" />

        <RadioButton
            android:id="@+id/radioButton194屈曲数4"
            android:layout_width="60dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/S屈曲数4"
            android:textSize="25sp" />
    </RadioGroup>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/return_button19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:text="@string/戻る"
                android:textSize="18sp" />

            <Button
                android:id="@+id/send_button19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:text="@string/次へ"
                android:textSize="18sp" />
        </LinearLayout>

        <!--TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/h20_p00"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" /-->

    </android.support.constraint.ConstraintLayout>

</LinearLayout>
